--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.75 2003-03-05 23:55:46 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.76 2003-03-06 00:20:15 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -279,7 +279,8 @@ library is not unitialized;
 \subsubsection{Specification}
 
 \begin{verbatim}
-GLint gl2psDrawPixels( GLsizei w, GLsizei h, GLenum format, GLenum type,
+GLint gl2psDrawPixels( GLsizei width, GLsizei height,
+                       GLenum format, GLenum type,
                        void *pixels )
 \end{verbatim}
 
@@ -292,8 +293,8 @@ commands). Beware that the image will be sorted according to the position of
 the current raster position only. The arguments are:
 
 \begin{description}
-\item[\dd{w}] Specifies the width of the image;
-\item[\dd{h}] Specifies the height of the image;
+\item[\dd{width}] Specifies the width of the image;
+\item[\dd{height}] Specifies the height of the image;
 \item[\dd{format}] Specifies the format of the pixel data. The symbolic
 constant \dd{GL_RGB} is the only one accepted at the moment.
 \item[\dd{type}] Specifies the data type for pixels. The symbolic constant
@@ -612,9 +613,9 @@ documentation.
 \item[0.8] (Mar ??, 2003) API change: \dd{gl2psNumShadeColors} has been
 removed and the color subdivision parameters \dd{nr}, \dd{ng} and \dd{nb}
 are now given as arguments to \dd{gl2psBeginPage} (see
-section~\ref{sec:gl2psBeginPage}); \dd{gl2psBeginPage} now takes the print
-viewport as argument; new \dd{gl2psDrawPixels} interface to produce mixed
-mode PostScript/Bitmap output; new \dd{gl2psBeginViewport} and
+section~\ref{sec:gl2psBeginPage}); \dd{gl2psBeginPage} now also takes the
+print viewport as argument; new \dd{gl2psDrawPixels} interface to produce
+mixed mode PostScript/Bitmap output; new \dd{gl2psBeginViewport} and
 \dd{gl2psEndViewport} interface to handle multiple OpenGL viewports; fixed
 small bug in occlusion culling code.
 \end{description}
