--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.76 2003-03-06 00:20:15 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.77 2003-03-06 00:35:36 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -346,8 +346,7 @@ functionality.
 
 \dd{gl2psEnable} and \dd{gl2psDisable} return:
 \begin{description}
-\item[\dd{GL2PS_UNINITIALIZED}] if \dd{pixels} is \dd{NULL} or if the
-library is not unitialized;
+\item[\dd{GL2PS_UNINITIALIZED}] if the library is not unitialized;
 \item[\dd{GL2PS_ERROR}] if an error occurred;
 \item[\dd{GL2PS_SUCCESS}] otherwise;
 \end{description}
@@ -378,8 +377,7 @@ buffer.
 
 \dd{gl2psPointSize} and \dd{gl2psLineWidth} return:
 \begin{description}
-\item[\dd{GL2PS_UNINITIALIZED}] if \dd{pixels} is \dd{NULL} or if the
-library is not unitialized;
+\item[\dd{GL2PS_UNINITIALIZED}] if the library is not unitialized;
 \item[\dd{GL2PS_ERROR}] if an error occurred;
 \item[\dd{GL2PS_SUCCESS}] otherwise;
 \end{description}
@@ -499,7 +497,7 @@ the picture was produced, and without altering its quality?) are important.
 Transparency is not supported yet. See the \dd{TODO} file for some
 explanations why this may or may not be possible.
 \item
-GL2PS does not support textures, volumic rendering, fog effects, etc.
+GL2PS does not support textures, fog effects, etc.
 \end{itemize}
 
 % Other implementation Notes:
