--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.77 2003-03-06 00:35:36 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.78 2003-03-06 00:44:07 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -48,7 +48,7 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 0.8, ?? March 2003}
+\date{Version 0.8, 6 March 2003}
 
 \maketitle
 
@@ -608,12 +608,12 @@ the code; added example program \dd{gl2psTest.c} to the distribution.
 \item[0.72] (Jan 21, 2003) Fixed crash in occlusion culling code; enhanced
 documentation.
 \item[0.73] (Jan 30, 2003) Minor code cleanup.
-\item[0.8] (Mar ??, 2003) API change: \dd{gl2psNumShadeColors} has been
+\item[0.8] (Mar 6, 2003) API change: \dd{gl2psNumShadeColors} has been
 removed and the color subdivision parameters \dd{nr}, \dd{ng} and \dd{nb}
 are now given as arguments to \dd{gl2psBeginPage} (see
 section~\ref{sec:gl2psBeginPage}); \dd{gl2psBeginPage} now also takes the
-print viewport as argument; new \dd{gl2psDrawPixels} interface to produce
-mixed mode PostScript/Bitmap output; new \dd{gl2psBeginViewport} and
+print \dd{viewport} as an argument; new \dd{gl2psDrawPixels} interface to
+produce mixed mode PostScript/bitmap output; new \dd{gl2psBeginViewport} and
 \dd{gl2psEndViewport} interface to handle multiple OpenGL viewports; fixed
 small bug in occlusion culling code.
 \end{description}
