better error handling

--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.78 2003-03-06 00:44:07 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.79 2003-03-06 01:01:42 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -615,7 +615,7 @@ section~\ref{sec:gl2psBeginPage}); \dd{gl2psBeginPage} now also takes the
 print \dd{viewport} as an argument; new \dd{gl2psDrawPixels} interface to
 produce mixed mode PostScript/bitmap output; new \dd{gl2psBeginViewport} and
 \dd{gl2psEndViewport} interface to handle multiple OpenGL viewports; fixed
-small bug in occlusion culling code.
+small bug in occlusion culling code; better error handling.
 \end{description}
 
 \end{document}
