--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.79 2003-03-06 01:01:42 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.80 2003-03-06 01:46:31 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -281,7 +281,7 @@ library is not unitialized;
 \begin{verbatim}
 GLint gl2psDrawPixels( GLsizei width, GLsizei height,
                        GLenum format, GLenum type,
-                       void *pixels )
+                       const void *pixels )
 \end{verbatim}
 
 \subsubsection{Description and arguments}
