--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.81 2003-03-06 01:49:35 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.82 2003-03-06 01:55:34 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -610,10 +610,10 @@ documentation.
 \item[0.73] (Jan 30, 2003) Minor code cleanup.
 \item[0.8] (Mar 6, 2003) API change: \dd{gl2psNumShadeColors} has been
 removed and the color subdivision parameters \dd{nr}, \dd{ng} and \dd{nb}
-are now given as arguments to \dd{gl2psBeginPage} (see
-section~\ref{sec:gl2psBeginPage}); \dd{gl2psBeginPage} now also takes the
-print \dd{viewport} as an argument; new \dd{gl2psDrawPixels} interface to
-produce mixed mode PostScript/bitmap output; new \dd{gl2psBeginViewport} and
+are now given as arguments to \dd{gl2psBeginPage}; API change:
+\dd{gl2psBeginPage} takes an additional argument (\dd{viewport}) to specify
+the print viewport; new \dd{gl2psDrawPixels} interface to produce mixed mode
+PostScript/bitmap output; new \dd{gl2psBeginViewport} and
 \dd{gl2psEndViewport} interface to handle multiple OpenGL viewports; fixed
 small bug in occlusion culling code; better error handling.
 \end{description}
