--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.91 2003-05-08 17:33:21 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.92 2003-06-01 00:26:03 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -48,15 +48,15 @@
 
 \title{GL2PS: an OpenGL to PostScript printing library}
 \author{Christophe Geuzaine}
-\date{Version 0.81, 22 March 2003}
+\date{Version 0.9, ? June 2003}
 
 \maketitle
 
 %%tth: \section*{Download}
 %%tth: The current distribution of GL2PS is available either as a
-%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-0.81.tar.gz}{tar.gz}
+%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-0.9.0.tar.gz}{tar.gz}
 %%tth: or as a 
-%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-0.81.zip}{zip}
+%%tth: \href{http://www.geuz.org/gl2ps/src/gl2ps-0.9.0.zip}{zip}
 %%tth: archive. These archives contain both a
 %%tth: \href{http://www.geuz.org/gl2ps/gl2ps.ps}{PostScript}
 %%tth: and a
@@ -620,6 +620,7 @@ PostScript/bitmap output; new \dd{gl2psBeginViewport} and
 \dd{gl2psEndViewport} interface to handle multiple OpenGL viewports; fixed
 small bug in occlusion culling code; better error handling.
 \item[0.81] (Mar 22, 2003) Fixed small typos in comments and documentation.
+\item[0.9] (?, 2003)
 \end{description}
 
 \end{document}
