--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.93 2003-06-02 07:20:24 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.94 2003-06-02 17:57:33 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -497,8 +497,8 @@ replace bitmap images. They just offer an alternative when high quality
 change the scale, the labels or the colors in a bitmap picture long after
 the picture was produced, and without altering its quality?) are important.
 \item
-Transparency is not supported yet. See the \dd{TODO} file for some
-explanations why this may or may not be possible.
+Transparency is not supported yet. See the \dd{TODO} file for an explanation
+why this may or may not actually be possible.
 \item
 GL2PS does not support textures, fog effects, etc.
 \end{itemize}
@@ -620,7 +620,9 @@ PostScript/bitmap output; new \dd{gl2psBeginViewport} and
 \dd{gl2psEndViewport} interface to handle multiple OpenGL viewports; fixed
 small bug in occlusion culling code; better error handling.
 \item[0.81] (Mar 22, 2003) Fixed small typos in comments and documentation.
-\item[0.9.0] (Jun 3, 2003) New numbering scheme (``major.minor.patch'');
+\item[0.9.0] (Jun 3, 2003) Fixed smooth shading detection for mixed
+smooth/flat shaded scenes; new library numbering scheme
+(``major.minor.patch'');
 \end{description}
 
 \end{document}
