--- a/doc/gl2ps.tex
+++ b/doc/gl2ps.tex
@@ -2,7 +2,7 @@
 %  GL2PS, an OpenGL to PostScript Printing Library
 %  Copyright (C) 1999-2003  Christophe Geuzaine 
 %
-%  $Id: gl2ps.tex,v 1.95 2003-06-02 18:09:06 geuzaine Exp $
+%  $Id: gl2ps.tex,v 1.96 2003-06-02 18:19:28 geuzaine Exp $
 % 
 %  E-mail: geuz@geuz.org
 %  URL: http://www.geuz.org/gl2ps/
@@ -622,7 +622,7 @@ small bug in occlusion culling code; better error handling.
 \item[0.81] (Mar 22, 2003) Fixed small typos in comments and documentation.
 \item[0.9.0] (Jun 2, 2003) Fixed smooth shading detection for mixed
 smooth/flat shaded scenes; new library numbering scheme
-(``major.minor.patch'');
+(``major.minor.patch'').
 \end{description}
 
 \end{document}
